# http-provider-macro

./: Cargo.toml  README.md
examples/: advanced.rs  basic.rs  mocking.rs  multiple_path_params.rs  params.rs
src/: error.rs  input.rs  lib.rs
src/expanders/: error.rs  interface.rs  method.rs  mod.rs
tests/: provider_tests.rs
