[package]
name = "http-provider-macro"
version = "0.1.3"
edition = "2021"
authors = ["AzeemShaik azeemshaik025@gmail.com"]
description = "A procedural macro for generating type-safe HTTP client providers"
repository = "https://github.com/azeemshaik025/http-provider-macro"
license = "MIT OR Apache-2.0"
keywords = ["http", "client", "macro", "rest", "api"]
categories = ["web-programming::http-client", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/http-provider-macro"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "2.0.102", features = ["full", "extra-traits", "parsing"] }


[dev-dependencies]
wiremock = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[features]
default = []
